--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
-
 spring:
+  thymeleaf:
+    cache: false
+    prefix: file:src/main/resources/templates/
   profiles:
     active: dev
   datasource:
